# voc-livekit-multimodal-example

./: .env.example  .gitignore  pyproject.toml
src/: agent.py
